Revert "use swift test"
This reverts commit f9d52c99667d76215b708709e91692925b197d03.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run Tests (ASAN)
         run: |
           set -euo pipefail
-          swift test --sanitize="address"
+          xcodebuild -scheme STKAudioKit -enableAddressSanitizer YES test | xcpretty
 
   # Generate Wiki docs on release
   docs:
