--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ jobs:
   test:
     strategy:
       matrix:
-        xcode_version: ['12.4']
-    runs-on: macos-latest
+        xcode_version: ['13.1']
+    runs-on: macos-12
     env:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode_version }}.app
     steps:
@@ -19,11 +19,11 @@ jobs:
       - name: Build STKAudioKit
         run: |
           set -euo pipefail
-          xcodebuild -scheme STKAudioKit -enableAddressSanitizer YES clean build | xcpretty
+          xcodebuild -destination 'platform=OS X,arch=x86_64' -scheme STKAudioKit -enableAddressSanitizer YES clean build | xcpretty
       - name: Run Tests (ASAN)
         run: |
           set -euo pipefail
-          xcodebuild -scheme STKAudioKit -enableAddressSanitizer YES test | xcpretty
+          xcodebuild -destination 'platform=OS X,arch=x86_64' -scheme STKAudioKit -enableAddressSanitizer YES test | xcpretty
 
   # Generate Wiki docs on release
   docs:
