--- a/.spi.yml
+++ b/.spi.yml
@@ -1,4 +1,5 @@
 version: 1
 builder:
   configs:
-    - documentation_targets: [STKAudioKit]
+    - platform: macos-xcodebuild
+      documentation_targets: [STKAudioKit]
