Revert "Build DocC documentation with `xcodebuild` rather than `swift build`."
This reverts commit fe82c5611135d7a566bec1f7a925d0679b0a669d.

--- a/.spi.yml
+++ b/.spi.yml
@@ -1,5 +1,4 @@
 version: 1
 builder:
   configs:
-    - platform: macos-xcodebuild
-      documentation_targets: [STKAudioKit]
+    - documentation_targets: [STKAudioKit]
