--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   test:
     strategy:
       matrix:
-        xcode_version: ['13.1']
+        xcode_version: ['13.4']
     runs-on: macos-12
     env:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode_version }}.app
@@ -25,3 +25,17 @@ jobs:
           set -euo pipefail
           xcodebuild -destination 'platform=OS X,arch=x86_64' -scheme STKAudioKit -enableAddressSanitizer YES test | xcpretty
 
+  demo:
+    strategy:
+      matrix:
+        xcode_version: ['13.4']
+    runs-on: macos-12
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode_version }}.app
+    steps:
+      - name: Check out STKAudioKit
+        uses: actions/checkout@v2
+      - name: Build STKAudioKitDemo
+        run: |
+          set -euo pipefail
+          xcodebuild -project Demo/STKAudioKitDemo.xcodeproj -sdk iphonesimulator -scheme STKAudioKitDemo -arch x86_64 ONLY_ACTIVE_ARCH=YES CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY="" clean build | xcpretty -c
