--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,9 +37,6 @@ jobs:
       # Disabling fail-fast ensures that the job will run all configurations of the matrix, even if one fails.
       fail-fast: false
       matrix:
-        scheme:
-          - STKAudioKitDemo (iOS)
-          - STKAudioKitDemo (macOS)
         xcode_version:
           - '13.2' # swift 5.5
           - '13.4' # swift 5.6
@@ -48,7 +45,7 @@ jobs:
         uses: AudioKit/ci/.github/actions/build-demo@main
         with:
           project: Demo/STKAudioKitDemo.xcodeproj
-          scheme: ${{ matrix.scheme }}
+          scheme: ${{ STKAudioKit }}
           xcode_version: ${{ matrix.xcode_version }}
 
   # Send notification to Discord on failure.
